# shalomeir-adaptive-ai-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
demorsc/: README.md
demorsc/data/: events.csv  events2.csv  monsters.json
demorsc/docs/: object-tree-operations.md  object-tree-schema.md
demorsc/world/: world.json
docs/: CODE_GUIDE.md  IMPLEMENTATION.md
scripts/: hygiene_check.sh  run_live_demos.py
specs/: agent-workflows.md  demo_case.md  prd.md  project-brief.md  schemas.md  trd.md
src/adaptive_agent/: __init__.py  action_validation.py  cli.py  config.py  context.py  conversation.py  llm.py  monitoring.py  observability.py  parsing.py  policy.py  python_repair.py  runner.py  sandbox.py  schemas.py  skills.py  source_contracts.py  verify.py
src/adaptive_agent/tools/: base.py  builtins.py  generated.py  registry.py
tests/: test_action_validation.py  test_builtins_docs.py  test_builtins_files.py  test_cli.py  test_config.py  test_context.py  test_demo_integration.py  test_generated.py  test_llm_fake.py  test_monitoring.py  test_observability.py  test_parsing.py  test_policy.py  test_registry.py  test_runner.py  test_runner_tools.py  test_sandbox.py  test_schemas.py  test_skills.py  test_smoke.py  test_verify.py
