[project]
name = "adaptive-agent"
version = "0.1.1"
description = "A CLI agent runtime that plans, creates tools, executes them in a constrained subprocess, and optionally persists reusable tools across sessions."
requires-python = ">=3.11"
dependencies = ["typer>=0.12", "rich>=13.7", "pydantic>=2.7", "httpx>=0.27", "python-dotenv>=1.0"]

[project.optional-dependencies]
monitoring = ["langfuse>=2.0"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
adaptive-agent = "adaptive_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
